--- a/spec/fixtures/vcr_cassettes/MonsterFacade/MonsterFacade_instance_methods/_monster_list.yml
+++ b/spec/fixtures/vcr_cassettes/MonsterFacade/MonsterFacade_instance_methods/_monster_list.yml
@@ -36,9 +36,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707191427&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=3ULdq7o4h92%2F8AuUyjIjtVWjemPWL7eQ3T9JZvFoANA%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707260871&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Hzv7BEwz%2BAQp%2FGJCM3vCpFVl%2BU0ZDxxZNVZ4sGe09iE%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707191427&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=3ULdq7o4h92%2F8AuUyjIjtVWjemPWL7eQ3T9JZvFoANA%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707260871&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=Hzv7BEwz%2BAQp%2FGJCM3vCpFVl%2BU0ZDxxZNVZ4sGe09iE%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -52,9 +52,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Tue, 06 Feb 2024 03:50:27 GMT
+      - Tue, 06 Feb 2024 23:07:51 GMT
       X-Ratelimit-Reset:
-      - '1707191429'
+      - '1707260873'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -171,14 +171,14 @@ http_interactions:
         URL that specifies the behavior of this scalar.","type":{"kind":"NON_NULL","name":null,"ofType":{"kind":"SCALAR","name":"String","ofType":null}},"defaultValue":null}]}]}}}
 
         '
-  recorded_at: Tue, 06 Feb 2024 03:50:27 GMT
+  recorded_at: Tue, 06 Feb 2024 23:07:51 GMT
 - request:
     method: post
     uri: https://www.dnd5eapi.co/graphql
     body:
       encoding: UTF-8
-      string: '{"query":"query GraphQL__Client__OperationDefinition_32740 {\n  monsters
-        {\n    index\n    name\n    challenge_rating\n    size\n    type\n    alignment\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_32740","variables":{}}'
+      string: '{"query":"query GraphQL__Client__OperationDefinition_32860 {\n  monsters
+        {\n    index\n    name\n    challenge_rating\n    size\n    type\n    alignment\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_32860","variables":{}}'
     headers:
       Content-Type:
       - application/json
@@ -196,9 +196,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707191428&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=W8%2FCoIncgDmtX9%2BY38TjIxj%2Blm8bvv3t%2BUAgAfQUBJ0%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707260872&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=vDrdhoJXwEd%2BRYM1xkzWKT7J5BiKuCDmxFsDzhNWORA%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707191428&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=W8%2FCoIncgDmtX9%2BY38TjIxj%2Blm8bvv3t%2BUAgAfQUBJ0%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707260872&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=vDrdhoJXwEd%2BRYM1xkzWKT7J5BiKuCDmxFsDzhNWORA%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -212,9 +212,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Tue, 06 Feb 2024 03:50:28 GMT
+      - Tue, 06 Feb 2024 23:07:52 GMT
       X-Ratelimit-Reset:
-      - '1707191429'
+      - '1707260873'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -311,5 +311,5 @@ http_interactions:
         evil"}]}}
 
         '
-  recorded_at: Tue, 06 Feb 2024 03:50:28 GMT
+  recorded_at: Tue, 06 Feb 2024 23:07:52 GMT
 recorded_with: VCR 6.2.0
