--- a/spec/fixtures/vcr_cassettes/DndService/DndService_GrapQL_API_service_methods/_query_monster_details_index_returns_A_DIFFERENT_MONSTER.yml
+++ b/spec/fixtures/vcr_cassettes/DndService/DndService_GrapQL_API_service_methods/_query_monster_details_index_returns_A_DIFFERENT_MONSTER.yml
@@ -36,9 +36,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707191435&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=hbYNqLU1u2aqEzN%2BCsZo9iSswr8DKE7kAymCsfbI0po%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707331140&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=2IHB6KgShgD1AOazWFYkLIzF7FHPah%2BmN1PGm%2FAn2kE%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707191435&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=hbYNqLU1u2aqEzN%2BCsZo9iSswr8DKE7kAymCsfbI0po%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707331140&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=2IHB6KgShgD1AOazWFYkLIzF7FHPah%2BmN1PGm%2FAn2kE%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -52,9 +52,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Tue, 06 Feb 2024 03:50:35 GMT
+      - Wed, 07 Feb 2024 18:39:00 GMT
       X-Ratelimit-Reset:
-      - '1707191436'
+      - '1707331142'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -171,7 +171,7 @@ http_interactions:
         URL that specifies the behavior of this scalar.","type":{"kind":"NON_NULL","name":null,"ofType":{"kind":"SCALAR","name":"String","ofType":null}},"defaultValue":null}]}]}}}
 
         '
-  recorded_at: Tue, 06 Feb 2024 03:50:35 GMT
+  recorded_at: Wed, 07 Feb 2024 18:39:01 GMT
 - request:
     method: post
     uri: https://www.dnd5eapi.co/graphql
@@ -208,9 +208,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707191435&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=hbYNqLU1u2aqEzN%2BCsZo9iSswr8DKE7kAymCsfbI0po%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707331141&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=RWovGoMZEUc4Wf95RKrKe%2FSKkyNjWC7ImJgnXzeUwIQ%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707191435&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=hbYNqLU1u2aqEzN%2BCsZo9iSswr8DKE7kAymCsfbI0po%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707331141&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=RWovGoMZEUc4Wf95RKrKe%2FSKkyNjWC7ImJgnXzeUwIQ%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -224,9 +224,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Tue, 06 Feb 2024 03:50:35 GMT
+      - Wed, 07 Feb 2024 18:39:01 GMT
       X-Ratelimit-Reset:
-      - '1707191437'
+      - '1707331142'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -343,19 +343,19 @@ http_interactions:
         URL that specifies the behavior of this scalar.","type":{"kind":"NON_NULL","name":null,"ofType":{"kind":"SCALAR","name":"String","ofType":null}},"defaultValue":null}]}]}}}
 
         '
-  recorded_at: Tue, 06 Feb 2024 03:50:35 GMT
+  recorded_at: Wed, 07 Feb 2024 18:39:01 GMT
 - request:
     method: post
     uri: https://www.dnd5eapi.co/graphql
     body:
       encoding: UTF-8
-      string: '{"query":"query GraphQL__Client__OperationDefinition_232480($index:
+      string: '{"query":"query GraphQL__Client__OperationDefinition_233180($index:
         String) {\n  monster(index: $index) {\n    index\n    name\n    size\n    armor_class
         {\n      value\n    }\n    speed {\n      walk\n      fly\n      swim\n    }\n    hit_points\n    strength\n    dexterity\n    constitution\n    intelligence\n    wisdom\n    charisma\n    damage_vulnerabilities\n    damage_resistances\n    damage_immunities\n    proficiency_bonus\n    proficiencies
         {\n      proficiency {\n        name\n      }\n      value\n    }\n    senses
         {\n      blindsight\n      darkvision\n      passive_perception\n    }\n    special_abilities
         {\n      name\n      desc\n    }\n    actions {\n      name\n      desc\n    }\n    legendary_actions
-        {\n      name\n      desc\n    }\n    condition_immunities {\n      name\n    }\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_232480","variables":{"index":"goblin"}}'
+        {\n      name\n      desc\n    }\n    condition_immunities {\n      name\n    }\n  }\n}","operationName":"GraphQL__Client__OperationDefinition_233180","variables":{"index":"goblin"}}'
     headers:
       Content-Type:
       - application/json
@@ -373,9 +373,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707191436&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=x1Rsnd9jK6Hhfmz326Q4dATMMs%2F2Ls44UE0ar8ICyAg%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1707331142&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=3uH4S5w2cty74DRD4TihKdNtw3iPuWhfaxID9WfxsDY%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1707191436&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=x1Rsnd9jK6Hhfmz326Q4dATMMs%2F2Ls44UE0ar8ICyAg%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1707331142&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=3uH4S5w2cty74DRD4TihKdNtw3iPuWhfaxID9WfxsDY%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -389,9 +389,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Tue, 06 Feb 2024 03:50:36 GMT
+      - Wed, 07 Feb 2024 18:39:02 GMT
       X-Ratelimit-Reset:
-      - '1707191437'
+      - '1707331143'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -412,5 +412,5 @@ http_interactions:
         80/320 ft., one target. Hit: 5 (1d6 + 2) piercing damage."}],"legendary_actions":null,"condition_immunities":[]}}}
 
         '
-  recorded_at: Tue, 06 Feb 2024 03:50:36 GMT
+  recorded_at: Wed, 07 Feb 2024 18:39:02 GMT
 recorded_with: VCR 6.2.0
